--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -149,7 +149,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/macao-title.png" alt="" style="width:410px;"></div>
+                        <div class="title-ill"><img src="images/ningbo-title.png" alt="" style="width:410px;"></div>
                         <h3>Photography by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
@@ -183,21 +183,23 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <img src="images/macao2_small.jpg" alt="">
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
+                        <!-- BOX  INTERVIEW-->
+                        <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                            <!-- CAPTION -->
+                            <!-- LEFT CAPTION -->
+                            <div class="pg-box-content">
+                                <!-- CONTENT -->
+                                <!-- INTERVIW -->
+                                <div id="pg-interview">
+                                    <h2 class="with-ill-small">Ningbo</h2>
+                                    <p>China has always been on my list of places to visit, so when I was asked to capture a little known city of 7.6 million people called Ningbo, which is sandwiched between the ocean and the low-lying Smiling Mountains, I jumped at the chance. My first impression was on crisp spring day, from the 32nd floor of the Shangri-La Hotel, all of Ningbo laid out in front of me. In the evenings, the peaceful expansive scenery was replaced by colorful light shows pulsing on the riverfront buildings, reminding me of Dan Flavin’s minimal fluorescent sculptures.</p>
+                                    <p>Below me, a mix of historic sites and unique architecture awaited. The Qing'an Guild, built during 1850-1853, is a grand gathering space with an opera stage and excellent natural acoustics. True to its original destiny as a meeting space for shipping merchants, it hosts little model boats and offbeat dioramas you’d want to take home.  The Ningbo Museum is similarly conceptual; a tribute to traditional Jiangnan residences mixing elements of mountains, water and oceans, old tiles and bamboo. The Tianyi Pavilion, world famous for its wide collection of books, is another architectural gem, featuring serene atmosphere and elegant landscape. The only noise you’ll hear is the click and clack of the towering bamboo as you sit beside the ponds. I wandered into the shop, and, inspired by the peace and quiet of the space, took home a beautiful walnut pen with a brass cap, a creative tool of the pre-technology era.</p>
+                                    <p>As you venture outside of the city, more magic is to be discovered; mountain temples that smell of incense and monks in saffron robes, chanting beside walls filled with golden buddhas. Giant forests of bamboo blowing in the wind and more bamboo pressing on used, old roofing tiles smashed into the temple’s newer layers of modern concrete. Xuedou Mountain, which was one of my favorite places on the trip. Located in the outer district of Fenghua and labeled as the abode for immortals on the sea, this temple houses a 56.74-meter statue of a sitting Maitreya Bodhisattva; rubbing his belly is supposed to bring you good luck and fortune. With a round face, long ears, squinting eyes and a perpetual smile, Maitreya is a favorite Chinese icon, nicknamed the ‘laughing Buddha’.</p>
+                                </div>
+                            </div>
+                            <!--END INTERVIEW -->
+                        </div>
+                        <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -219,26 +221,6 @@
             <!-- IMAGE END -->
 
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2 class="with-ill-small">Macao</h2>
-                        <p>It’s hot and bright. Sun glints off the plate glass windows of Chanel and Dior shops. The hotel rooms are large, the bathrooms are made of marble and a perfect bed await. But there are no bings and clangs and endless flashing lights.
-                            No calls from card dealers draw your attention to the baseball hat wearing crowds that form around them. In Macao, it’s hard to find the gambling areas in the resorts at all. On our stay, I kept meaning to spend time in a casino
-                            to see what gambling actually looked like, but never got past a quick glance into a quiet room. The gambling in Macao is expressly hidden away from the grand entrances of the resorts, behind closed doors, no drinks allowed.</p>
-                        <p>We did visit the new megaplex resort that is Studio City, where a massive ferris wheel is indeed built into a new skyscraper, 20 something flights up. We rode the lit-up escalators, visited a few themed restaurants and passed by
-                            luxury shops in indoor malls that did remind me a bit of Las Vegas. Yet the Macao I became fond of emerged from the neighborhoods that I would consider the real city, where the old casinos (like the landmark Hotel Lisboa with
-                            an awesome glammy 70’s vibe) spill into the busy streets of a thriving metropolis.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -300,21 +282,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <img src="images/macao5_small.jpg" alt="">
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -335,7 +302,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
             <!-- BOX  INTERVIEW-->
             <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
                 <!-- CAPTION -->
@@ -344,24 +310,14 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2 class="with-ill-small">Once a Portuguese Colony</h2>
-                        <p>Macao was a Portuguese colony until 1999. And while the province is now emancipated, the city still prides itself on its heritage. The Portuguese language itself prevails - you will find it still on almost all public signs, as
-                            well as throughout the vernacular language and of course on most restaurant menus. A good example of that pride is found at the Ruins of St. Paul - a seventeenth century Jesuit church that burned in a fire after a typhoon in
-                            1835. Today, a magnificent section of the façade remains, supported and transformed into an open air museum, as well as one of the favorite meeting places in the city, especially during golden hour where it serves as a selfie
-                            hangout.</p>
-                        <p>Below the steps of the ruins, streets and alleyways are filled with local shops and food stalls packed with gift boxes; pretty almond cookies and barrels brimming with varieties of jerky ranging in flavor from spicy pork with abalone
-                            to pork with black pepper and then further onto wild boar and ostrich.</p>
-                        <p>The most iconic Portuguese reference comes from the famous tiles that line the grand pedestrian thoroughfares of Lisbon, Porto, Brazil as well as the squares and streets and fountains of Macao. Throughout the central business districts,
-                            you are constantly reminded of this history as you cross over the Calçada of tiled ships, tiled waves and tiled patterns all masterfully constructed of the signature two-toned Portuguese mosaic tiles.</p>
-                        <p>To find the heart of Macao head into the neighborhoods. Home cooks come to buy the freshest available fish and produce in Chinatown, never deigning to prepare food they have not purchased alive. Wooden-shelved natural apothecaries
-                            house thousands of deep drawers piled high with homeopathic remedies. Uniformed children stop at tea shops on their way home from school with their parents, sitting comfortably beside international tourist couples with rainbow
-                            dyed hair.</p>
-
+                        <h2 class="with-ill-small">Food</h2>
+                        <p>Ningbo is known for its seafood. The catch? I am one of those people that doesn’t eat anything from the sea, so the challenge was clear. Eating dumplings three meals a day turned out to be divine, however, and was one of the elements that made me fall in love with China. But there’s so much more to local cuisine; at Grandma’s Home, we ate delicious pumpkin soup and spicy chicken with noodles, as well as many other traditional dishes. The dumplings, especially the sweet variety, stuck with me forever.</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
             </div>
             <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -380,6 +336,25 @@
                 <!--[if IE 9]></video><![endif]-->
                 <img srcset="images/08_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
             </picture>
+            <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2 class="with-ill-small">Food</h2>
+                        <p>The moments that remain with me from Ningbo were often from encounters with the people there. At a base of the Laughing Buddha Temple I had my palm read by an old man, who also sold tiny plastic buddhas. I have a pretty vague idea of what he said, but the gist was that I needed to listen better, and that I would find my other half in Lunar May, and perhaps I shouldn’t eat so many dumplings. At Moon Lake, I watched elders practicing Tai Chi and families renting swan-shaped boat to relax, delicate notes of someone playing the flute drifting by. A lovely lady joined me spontaneously to watch birds on the shore. And at the Chinese opera at Park Hyatt Ningbo, I experienced my most stunning moment - in the lobby, as we were checking in, a beautiful Chinese ‘Kunqu’ opera performer, singing in a signature high pitched birdlike voice, wandered the halls past us all of a sudden.  I trailed behind to find a her standing outside by the pools overlooking a mirror smooth pastel Dongqian Lake, a living film. The sun was a great ball of orange hovering on the edge of the mountains. An unexpectedly perfect ending to an unexpected trip.
+                        </p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -573,22 +548,69 @@
             <!-- IMAGE END -->
 
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2 class="with-ill-small">Lazarus</h2>
-                        <p>In the colorful Lazarus district we ran into a local designer’s photo shoot while taking pictures ourselves of the multi-colored colonial balconied walls, covered with hanging plants as scooters streamed by. After striking up a
-                            conversation with the line’s designer, we walked around the corner to her shop, En Masse, where she proceeded to customize a perfect leather handbag for me on the spot.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
+                        <!-- BOX  INTERVIEW-->
+                        <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                            <!-- CAPTION -->
+                            <!-- LEFT CAPTION -->
+                            <div class="pg-box-content">
+                                <!-- CONTENT -->
+                                <!-- INTERVIW -->
+                                <div id="pg-interview">
+
+                                    <h2 class="with-ill-small">Resources</h2>
+
+                                    <h4>Eat:</h4>
+
+                                    <h5><a href="https://www.tripadvisor.com/Restaurant_Review-g297470-d4674956-Reviews-Grandma_s_Home_Tian_No_1-Ningbo_Zhejiang.html" target="_blank">Grandma’s Home (Tian No. 1)</a></h5>
+                                    <p>Traditional Chinese food in a chain restaurant that had an epic view over Tianyi Square.</p>
+
+                                    <h5><a href="https://www.tripadvisor.com/Restaurant_Review-g297470-d4674913-Reviews-Gang_Ya_Gou_TangTuan_Dian_TianYi_Plaza-Ningbo_Zhejiang.html" target="_blank">Gang Ya Gou TangTuan Dian</a></h5>
+                                    <p>Purple dumplings, cold spiced beef tendon, hairy crab xiao long bao and other local delicacies on Tianyi Square.</p>
+
+                                    <h5>Min Zhen Shipu</h5>
+                                    <p>At this restaurant near Xuedou Mountain, you can pick out your fish or even a snake from piles of ice, like at a fish market. For adventurous eaters.</p>
+
+                                    <h5><a href="" target="_blank"></a></h5>
+                                    <p></p>
+
+
+
+                                    <h4>Stay:</h4>
+
+                                    <h5><a href="http://www.shangri-la.com/ningbo/shangrila/" target="_blank">Shangri-La Hotel Ningbo</a></h5>
+                                    <p>Towering above the city, the Shanrgi-La is modern and impeccably designed, with floor to ceiling windows and a lavish throwback ballroom.</p>
+
+                                    <h5><a href="https://ningbo.park.hyatt.com/en/hotel/home.html" target="_blank">Park Hyatt Ningbo</a></h5>
+                                    <p>With its slick spa, minimal look, lake views and a traditional tea house on site, the Hyatt is pampering but not overwhelming.</p>
+
+                                    <h4>Do:</h4>
+
+                                    <h5>Qing'an Guild</h5>
+                                    <p>The ancient building was designed to be a gathering place for shipping merchants and a shrine to Mazu, a goddess who protects fishermen and sailors.</p>
+
+                                    <h5>Ningbo Museum</h5>
+                                    <p>Designed by Wang Shu, the first Chinese citizen to win the Pritzker Architecture Prize in 2012, this is a must see.</p>
+
+                                    <h5>Ningbo Drum Tower</h5>
+                                    <p>This local landmark usually features an exhibition at its top, as well as the ever-present views of the city and the market below. Do not miss the ‘secret’ tunnel that leads you to a bustling market on the other side.</p>
+
+                                    <h5><a href="https://www.travelchinaguide.com/attraction/zhejiang/ningbo/tianyi.htm" target="_blank">The Tianyi Pavilion</a></h5>
+                                    <p>The oldest private library in existence in China, built in the times of the Ming dynasty. Rare books and relics.</p>
+
+                                    <h5>Tianyi Square</h5>
+                                    <p>Sit above it at Grandma’s Home and watch the world pass by below.</p>
+
+                                    <h5><a href="https://www.hyatt.com/corporate/spas/Yue-Hu-Spa/en/home.html" target="_blank">Yue Hu Spa at Park Hyatt Ningbo</a></h5>
+                                    <p>Soothing baths and traditional treatments, some featuring a giant tea bag dipped into the tub.</p>
+
+                                    <h5>Song Dynasty Sculpture Park</h5>
+                                    <p>A stunning collection of  Southern Song Dynasty sculptures, most of them intact. The tiger carvings are especially inspiring, their eyelids lowered as if half asleep.</p>
+
+                                </div>
+                            </div>
+                            <!--END INTERVIEW -->
+                        </div>
+                        <!-- END BOX -->
 
 
         </div>
@@ -613,7 +635,7 @@
                     <span class="feature">Ningbo</span>
                 </div>
                 <div class="feature-links">
-                    <span id="pageLink"><a href="#page30">Trip Resources</a></span>
+                    <span id="pageLink"><a href="#page17">Trip Resources</a></span>
                 </div>
             </div>
         </div>
@@ -741,15 +763,15 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // OUT
-                $("#page30").velocity({
+                $("#page17").velocity({
                     opacity: 1
                 }, {
                     display: "block"
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // IN
-                pageCount = 29;
-                pageNext = 29;
+                pageCount = 16;
+                pageNext = 16;
             }
         }
 
