--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -149,7 +149,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/macao-title.png" alt="" style="width:410px;"></div>
+                        <div class="title-ill"><img src="images/wakiki-title.png" alt="" style="width:410px;"></div>
                         <h3>Photography by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
                          Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
@@ -182,21 +182,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <img src="images/macao2_small.jpg" alt="">
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -215,28 +200,6 @@
                 <img srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
-
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2 class="with-ill-small">Macao</h2>
-                        <p>It’s hot and bright. Sun glints off the plate glass windows of Chanel and Dior shops. The hotel rooms are large, the bathrooms are made of marble and a perfect bed await. But there are no bings and clangs and endless flashing lights.
-                            No calls from card dealers draw your attention to the baseball hat wearing crowds that form around them. In Macao, it’s hard to find the gambling areas in the resorts at all. On our stay, I kept meaning to spend time in a casino
-                            to see what gambling actually looked like, but never got past a quick glance into a quiet room. The gambling in Macao is expressly hidden away from the grand entrances of the resorts, behind closed doors, no drinks allowed.</p>
-                        <p>We did visit the new megaplex resort that is Studio City, where a massive ferris wheel is indeed built into a new skyscraper, 20 something flights up. We rode the lit-up escalators, visited a few themed restaurants and passed by
-                            luxury shops in indoor malls that did remind me a bit of Las Vegas. Yet the Macao I became fond of emerged from the neighborhoods that I would consider the real city, where the old casinos (like the landmark Hotel Lisboa with
-                            an awesome glammy 70’s vibe) spill into the busy streets of a thriving metropolis.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -296,21 +259,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <img src="images/macao5_small.jpg" alt="">
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -331,33 +279,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2 class="with-ill-small">Once a Portuguese Colony</h2>
-                        <p>Macao was a Portuguese colony until 1999. And while the province is now emancipated, the city still prides itself on its heritage. The Portuguese language itself prevails - you will find it still on almost all public signs, as
-                            well as throughout the vernacular language and of course on most restaurant menus. A good example of that pride is found at the Ruins of St. Paul - a seventeenth century Jesuit church that burned in a fire after a typhoon in
-                            1835. Today, a magnificent section of the façade remains, supported and transformed into an open air museum, as well as one of the favorite meeting places in the city, especially during golden hour where it serves as a selfie
-                            hangout.</p>
-                        <p>Below the steps of the ruins, streets and alleyways are filled with local shops and food stalls packed with gift boxes; pretty almond cookies and barrels brimming with varieties of jerky ranging in flavor from spicy pork with abalone
-                            to pork with black pepper and then further onto wild boar and ostrich.</p>
-                        <p>The most iconic Portuguese reference comes from the famous tiles that line the grand pedestrian thoroughfares of Lisbon, Porto, Brazil as well as the squares and streets and fountains of Macao. Throughout the central business districts,
-                            you are constantly reminded of this history as you cross over the Calçada of tiled ships, tiled waves and tiled patterns all masterfully constructed of the signature two-toned Portuguese mosaic tiles.</p>
-                        <p>To find the heart of Macao head into the neighborhoods. Home cooks come to buy the freshest available fish and produce in Chinatown, never deigning to prepare food they have not purchased alive. Wooden-shelved natural apothecaries
-                            house thousands of deep drawers piled high with homeopathic remedies. Uniformed children stop at tea shops on their way home from school with their parents, sitting comfortably beside international tourist couples with rainbow
-                            dyed hair.</p>
-
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
         </div>
         <!-- end wrapper div -->
     </div>
@@ -432,77 +353,77 @@
             <!-- IMAGE END -->
 
 
-                        <!-- BOX  INTERVIEW-->
-                        <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                            <!-- CAPTION -->
-                            <!-- LEFT CAPTION -->
-                            <div class="pg-box-content">
-                                <!-- CONTENT -->
-                                <!-- INTERVIW -->
-                                <div id="pg-interview">
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
 
-                                    <h2 class="with-ill-small">Resources</h2>
+                        <h2 class="with-ill-small">Resources</h2>
 
-                                    <h4>Eat:</h4>
+                        <h4>Eat:</h4>
 
-                                    <h5><a href="http://mahinaandsuns.com/" target="_blank">Mahina & Sun's</a></h5>
-                                    <p>Chef Ed Kenney is behind some of Hawaii’s most exciting eateries. This is his fourth establishment, serving rich ricotta toast for breakfast and fresh roasted fish for dinner.</p>
+                        <h5><a href="http://mahinaandsuns.com/" target="_blank">Mahina & Sun's</a></h5>
+                        <p>Chef Ed Kenney is behind some of Hawaii’s most exciting eateries. This is his fourth establishment, serving rich ricotta toast for breakfast and fresh roasted fish for dinner.</p>
 
-                                    <h5><a href="https://www.facebook.com/ARVO-631655123638880/" target="_blank">ARVO</a></h5>
-                                    <p>A small Australian cafe next to a plant shop, ARVO is a bright, friendly and photogenic breakfast favorite, and the coffee is second to none.</p>
+                        <h5><a href="https://www.facebook.com/ARVO-631655123638880/" target="_blank">ARVO</a></h5>
+                        <p>A small Australian cafe next to a plant shop, ARVO is a bright, friendly and photogenic breakfast favorite, and the coffee is second to none.</p>
 
-                                    <h5><a href="http://www.mudhenwater.com/" target="_blank">Mud Hen Water</a></h5>
-                                    <p>Another popular restaurant by Ed Kenney, where traditional Hawaiian fare meets creative plating and modern flourishes.</p>
+                        <h5><a href="http://www.mudhenwater.com/" target="_blank">Mud Hen Water</a></h5>
+                        <p>Another popular restaurant by Ed Kenney, where traditional Hawaiian fare meets creative plating and modern flourishes.</p>
 
-                                    <h5><a href="https://www.facebook.com/pages/Okata-Bento/111741405531454" target="_blank">Okata Bento</a></h5>
-                                    <p>For authentic local street food, there’s no better option. The bento boxes are straightforward and delicious, well worth the lines forming around lunchtime.</p>
+                        <h5><a href="https://www.facebook.com/pages/Okata-Bento/111741405531454" target="_blank">Okata Bento</a></h5>
+                        <p>For authentic local street food, there’s no better option. The bento boxes are straightforward and delicious, well worth the lines forming around lunchtime.</p>
 
-                                    <h5><a href="http://thepigandthelady.com/piggysmalls/" target="_blank">Piggy Smalls</a></h5>
-                                    <p>Offering a casual take on Vietnamese food, Piggy Smalls has excellent pho and seriously addictive ‘pho-strami’ banh mi sandwiches.</p>
+                        <h5><a href="http://thepigandthelady.com/piggysmalls/" target="_blank">Piggy Smalls</a></h5>
+                        <p>Offering a casual take on Vietnamese food, Piggy Smalls has excellent pho and seriously addictive ‘pho-strami’ banh mi sandwiches.</p>
 
 
-                                    <h4>Stay:</h4>
+                        <h4>Stay:</h4>
 
-                                    <h5><a href="http://surfjack.com" target="_blank">Surfjack Hotel & Swim Club</a></h5>
-                                    <p>One of Waikiki’s best boutique hotels, the easy going Surfjack successfully combines colorful throw pillows, artisanal wooden touches and lots of sunlight.</p>
+                        <h5><a href="http://surfjack.com" target="_blank">Surfjack Hotel & Swim Club</a></h5>
+                        <p>One of Waikiki’s best boutique hotels, the easy going Surfjack successfully combines colorful throw pillows, artisanal wooden touches and lots of sunlight.</p>
 
-                                    <h5><a href="http://www.themodernhonolulu.com/" target="_blank">The Modern</a></h5>
-                                    <p>Yes, it’s a resort, but The Modern truly stands out thanks to its clean design, beach views and elevated amenities, like the secluded ‘sunset pool’.</p>
+                        <h5><a href="http://www.themodernhonolulu.com/" target="_blank">The Modern</a></h5>
+                        <p>Yes, it’s a resort, but The Modern truly stands out thanks to its clean design, beach views and elevated amenities, like the secluded ‘sunset pool’.</p>
 
-                                    <h4>Do:</h4>
+                        <h4>Do:</h4>
 
-                                    <h5>Take a surf lesson at Queens Beach</h5>
-                                    <p>Even beginners walk away from the beach feeling excited about surfing. There are plenty of opportunities along the coastline.</p>
+                        <h5>Take a surf lesson at Queens Beach</h5>
+                        <p>Even beginners walk away from the beach feeling excited about surfing. There are plenty of opportunities along the coastline.</p>
 
-                                    <h5><a href="https://honolulumuseum.org/11981-spalding_house" target="_blank">Visit the Spalding House</a></h5>
-                                    <p>One of Honolulu Museum of Art’s two locations, the house is a mix of galleries, café, pop-up gift shop, and sculpture gardens. When there, don’t miss the permanent installation of David Hockney's L'Enfant et les sortilèges.</p>
+                        <h5><a href="https://honolulumuseum.org/11981-spalding_house" target="_blank">Visit the Spalding House</a></h5>
+                        <p>One of Honolulu Museum of Art’s two locations, the house is a mix of galleries, café, pop-up gift shop, and sculpture gardens. When there, don’t miss the permanent installation of David Hockney's L'Enfant et les sortilèges.</p>
 
-                                    <h5><a href="http://www.honolulubiennial.org" target="_blank">Visit the Honolulu Biennial</a></h5>
-                                    <p>Taking place March 8th-May 8th, the Biennial is a great opportunity to explore on the local art scene, as well as featured work by guests from Australia, Japan and beyond.</p>
+                        <h5><a href="http://www.honolulubiennial.org" target="_blank">Visit the Honolulu Biennial</a></h5>
+                        <p>Taking place March 8th-May 8th, the Biennial is a great opportunity to explore on the local art scene, as well as featured work by guests from Australia, Japan and beyond.</p>
 
-                                    <h5><a href="http://www.islandviewhawaii.com/" target="_blank">Swim with sharks with Island View Hawaii</a></h5>
-                                    <p>Dolphins, whales and Galapagos sharks are all frequent sites on this company’s diving tours. Cultural coastal tours for the less adventurous are also available.</p>
+                        <h5><a href="http://www.islandviewhawaii.com/" target="_blank">Swim with sharks with Island View Hawaii</a></h5>
+                        <p>Dolphins, whales and Galapagos sharks are all frequent sites on this company’s diving tours. Cultural coastal tours for the less adventurous are also available.</p>
 
-                                    <h5><a href="http://www.paikohawaii.com/" target="_blank">Take a workshop at Paiko</a></h5>
-                                    <p>This attractive ‘botanical boutique’ offers classes on everything from flower crowns to succulent gardens, as well as private workshops upon request.</p>
+                        <h5><a href="http://www.paikohawaii.com/" target="_blank">Take a workshop at Paiko</a></h5>
+                        <p>This attractive ‘botanical boutique’ offers classes on everything from flower crowns to succulent gardens, as well as private workshops upon request.</p>
 
-                                    <h4>Credits</h4>
-                                    <h5>Clothing</h5>
-                                    <p>Salvage Public<br/>
-                                    Olive and Olive<br/>
-                                    Meleana</p>
+                        <h4>Credits</h4>
+                        <h5>Clothing</h5>
+                        <p>Salvage Public<br/>
+                        Olive and Olive<br/>
+                        Meleana</p>
 
-                                    <h5>Models</h5>
-                                    <p>Kaili and Isaac Moore</p>
+                        <h5>Models</h5>
+                        <p>Kaili and Isaac Moore</p>
 
-                                    <h5>Styling</h5>
-                                    <p>Lindsey Higa and Meleana Estes</p>
+                        <h5>Styling</h5>
+                        <p>Lindsey Higa and Meleana Estes</p>
 
-                                </div>
-                            </div>
-                            <!--END INTERVIEW -->
-                        </div>
-                        <!-- END BOX -->
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
 
         </div>
