added homepage images

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -121,9 +121,9 @@
 
               <div class="feature-card feature-small">
                   <a href="wakiki/index.html">
-                      <img src="images/tokyo-feature.jpg" alt="" class="preview" />
+                      <img src="images/wakiki-feature.jpg" alt="" class="preview" />
                       <div class="info">
-                          <img src="images/tokyo-title.png" alt="" class="title" />
+                          <img src="images/wakiki-title.png" alt="" class="title" />
                           <p class="text">Ever the tourist destination, Waikiki is kind to those who decide to linger. Sun kissed skin and salty hair are part of the deal.</p>
                           <div class="meta">beauty<span>5.26.2017</span></div>
                       </div>
@@ -132,9 +132,9 @@
 
                 <div class="feature-card feature-small">
                     <a href="ningbo/index.html">
-                        <img src="images/minneapolis-feature.jpg" alt="" class="preview" />
+                        <img src="images/ningbo-feature.jpg" alt="" class="preview" />
                         <div class="info">
-                            <img src="images/minneapolis-title.png" alt="" class="title title-wide" />
+                            <img src="images/ningbo-title.png" alt="" class="title title-wide" />
                             <p class="text">Nestled between the mountains and the ocean, Ningbo reveals an inviting China,  steeped in tradition and abundant with dumplings.</p>
                             <div class="meta">travel log<span>5.26.2017</span></div>
                         </div>
